--- a/Hotel-Reviews_Web-Scrapping.ipynb
+++ b/Hotel-Reviews_Web-Scrapping.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hotel Review Sentiment Analysis Part I: Web Scrapping\n",
+    "# Hotel Review Sentiment Analysis Part 1: Web Scrapping\n",
     "## Adura ABIONA, PhD (UNSW)\n",
     "### 4 May, 2017"
    ]
