--- a/Hotel-Reviews_Web-Scrapping.ipynb
+++ b/Hotel-Reviews_Web-Scrapping.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hotel Review Sentiment Analysis Part 1: Web Scrapping\n",
+    "# Hotel Review Sentiment Analysis Part 1: Web Scraping\n",
     "## Adura ABIONA, PhD (UNSW)\n",
     "### 4 May, 2017"
    ]
@@ -15,7 +15,7 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "This is an attempt to use sentimental analysis to analyse Australian hotels, from four major cities (Canberra, Sydney, Melbourne and Brisbane), based on reviewers' opionions (on a numerical scale of 1-5) from [**TripAdvisor**](http://www.tripadvisor.com.au) website.  \n",
+    "This is an attempt to use sentiment analysis to analyse Australian hotels, from four major cities (Canberra, Sydney, Melbourne and Brisbane), based on reviewers' opionions (on a numerical scale of 1-5) from [**TripAdvisor**](http://www.tripadvisor.com.au) website.  \n",
     "\n",
     "**Part I** of this work is based on data acquisition through web scraping from TripAdvisor using [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/).\n",
     "\n",
