--- a/Hotel-Reviews_Web-Scrapping.ipynb
+++ b/Hotel-Reviews_Web-Scrapping.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "This is an attempt to use sentimental analysis to analyse Australian hotels, from four major cities (Canberra, Sydney, Melbourne and Brisbane), based on reviewers' opionions (on a numerical scale of 1-5) from [**TripAdvisor**](http://www.tripadvisor.com.au) website.  \n",
     "\n",
-    "**Part I** of this work is based on data acquisition through web scraping from TripAdvisor using [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/).\n",
+    "**Part 1** of this work is based on data acquisition through web scraping from TripAdvisor using [BeautifulSoup](https://www.crummy.com/software/BeautifulSoup/).\n",
     "\n",
     "[**TripAdvisor**](http://www.tripadvisor.com.au) is an online hotel review organisation. It allows hotel customers in many nations to write comments about their experiences in the hotel they stayed and rate the hotel's servion on a numerical scale of 1-5. \n",
     "\n",
